# turbsim-service

./: .pre-commit-config.yaml  ATTRIBUTION.md  Dockerfile  LICENSE  README.md  app.py  app_configuration.json  octue.yaml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  twine.json
.github/workflows/: cd.yml  python-ci.yml  release.yml  update-pull-request.yml
data/: TurbSim.inp
tests/: base.py  test_app.py  test_deployment.py
tests/data/turbsim/: TurbSim.inp
tests/data/turbsim_with_profile/: TurbSim.inp
turbsim_service/: app.py
