[tool.poetry]
name = "turbsim-service"
version = "0.4.0.openfast-3.5.3"
description = "Turbsim as a service."
authors = ["Marcus Lugg <marcus@octue.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
octue = "0.56.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "<=3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
