[tool.poetry]
name = "turbsim-service"
version = "0.5.0"
description = "Turbsim as a service."
authors = ["Marcus Lugg <marcus@octue.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
octue = "0.59.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "<=3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
